--- a/fantik/scss/_breadCrumbs.scss
+++ b/fantik/scss/_breadCrumbs.scss
@@ -5,6 +5,10 @@
   margin-bottom: em(50px);
 }
 
+.breadCrumbsList {
+  margin: 0 15px;
+}
+
 .breadCrumbsItem{
   display: inline-block;
   color: $whiteColor;
