--- a/fantik/scss/_newGoodsAndSaw.scss
+++ b/fantik/scss/_newGoodsAndSaw.scss
@@ -32,12 +32,14 @@
 }
 
 .newGood,
-.youSaw{
+.youSaw,
+.catalogProduct{
   text-align: center;
 }
 
 .blockNewGoodImg,
-.blockYouSawImg{
+.blockYouSawImg,
+.blockCatalogProductImg{
   border: 1px solid $greyLightColor;
   overflow: hidden;
   margin-bottom: em(15px);
@@ -48,17 +50,19 @@
 }
 
 .newGoodImg,
-.youSawImg{
+.youSawImg,
+.catalogProductImg{
   max-width: 220px;
 }
 
 .newGoodTitle,
-.youSawTitle{
+.youSawTitle,
+.catalogProductTitle{
   font-size: em(18px);
   font-weight: 400;
   color: $primeColor;
   margin-bottom: em(5px);
-  display: inline-block;
+  display: inline;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -66,14 +70,16 @@
 }
 
 .newGoodCod,
-.youSawCod{
+.youSawCod,
+.catalogProductCod{
   color: $greyDarkColor;
   font-size: em(14px);
   margin-bottom: em(15px);
 }
 
 .newGoodPrice,
-.youSawPrice{
+.youSawPrice,
+.catalogProductPrice{
   font-family: Roboto-bold, sans-serif;
   font-size: em(18px);
   color: $primeColorSecond;
