--- a/fantik/scss/main.scss
+++ b/fantik/scss/main.scss
@@ -1,8 +1,8 @@
 @import "compass/reset";
 @import "compass/css3";
 @import "_variables";
-@import "_placeholders";
 @import "_mixins";
+@import "_placeholders";
 @import "_grid";
 @import "_fonts";
 @import "_font-icons";
@@ -10,6 +10,7 @@
 @import "_header";
 @import "_breadCrumbs";
 @import "_contact";
+@import "_catalog";
 @import "_product";
 @import "_newGoodsAndSaw";
 @import "_footer";
