--- a/fantik/scss/_placeholders.scss
+++ b/fantik/scss/_placeholders.scss
@@ -21,3 +21,9 @@
 %titleUpper{
   text-transform: uppercase;
 }
+
+%title{
+  color: $primeColorSecond;
+  font-size: em(24px);
+  font-family: Roboto-mediun, sans-serif;
+}
