--- a/fantik/scss/_catalog.scss
+++ b/fantik/scss/_catalog.scss
@@ -236,7 +236,12 @@
         visibility: hidden;
       }
     }
+  }
 
+  .catalogProducts{
+      .col-md-4{
+      height: 260px;
+    }
   }
 }
 
