--- a/fantik/scss/main.scss
+++ b/fantik/scss/main.scss
@@ -12,5 +12,6 @@
 @import "_contact";
 @import "_catalog";
 @import "_product";
+@import "_callback";
 @import "_newGoodsAndSaw";
 @import "_footer";
