added 'cheshir' and 'postelka'

--- a/fantik/css/main.css
+++ b/fantik/css/main.css
@@ -2617,10 +2617,10 @@ label[for='contactFormCopy'] {
 }
 .cartPseudoTable .icon-x-pointer {
   font-size: 14px;
-  color: #9c9c9c;
+  color: #9d9d9d;
 }
 .cartPseudoTable .icon-sum-pointer {
-  color: #9c9c9c;
+  color: #9d9d9d;
 }
 
 .cartPseudoTh,
