--- a/cheshir/style.css
+++ b/cheshir/style.css
@@ -2877,3 +2877,21 @@ button.add_advert span {
     }
 
 }
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    select:focus,
+    textarea:focus,
+    input:focus {
+        font-size: 16px;
+        background: #eee;
+    }
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    select:focus,
+    textarea:focus,
+    input:focus {
+        font-size: 16px;
+        background: #eee;
+    }
+}
