--- a/cheshir/style.css
+++ b/cheshir/style.css
@@ -2887,11 +2887,19 @@ button.add_advert span {
     }
 }
 
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-    select:focus,
+/*@media screen and (-webkit-min-device-pixel-ratio:0) {*/
+    /*select:focus,*/
+    /*textarea:focus,*/
+    /*input:focus {*/
+        /*font-size: 16px;*/
+        /*background: #eee;*/
+    /*}*/
+/*}*/
+
+@media only screen and (max-device-width:568px) {
+    input[type="text"]:focus,
     textarea:focus,
-    input:focus {
-        font-size: 16px;
-        background: #eee;
+    select:focus {
+        font-size:16px;
     }
 }
